fixed the navbar which had a problem with the width in the home.html page

--- a/css/about.css
+++ b/css/about.css
@@ -50,6 +50,7 @@ h1 {
   font-weight: 900;
   letter-spacing: 0.1rem;
   margin-bottom: 1em;
+  font-family: "Shadows Into Light", cursive;
 }
 
 h2 {
