--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ body {
 	ul {float: none;}
 	nav li:first-of-type {margin-left: 0;}
   }
-  @media screen and (max-width: 550px) {
+  @media screen and (max-width: 768px) {
   nav {overflow: visible;}
   nav li {
 	display: block;
@@ -239,6 +239,10 @@ ul {
 	transform: translateY(-8px) rotate(-45deg);
   }
   
+
+  
+  
+
   @media (max-width: 768px) {
 	.menu {
 	  position: absolute;
@@ -302,6 +306,9 @@ header a:hover {
 	background: #f42c40;
 	color: var(--clr-accent);
 	text-align: center;
+	justify-content: center;
+	display: flex;
+	flex-direction: column;
 	padding: 2.5em 0;
 	font-size: var(--fs-h3);
   }
