--- a/css/home.css
+++ b/css/home.css
@@ -20,6 +20,11 @@ h1 {
   border-bottom: 1px solid #f42c40;
   padding-bottom: 2.5rem;
   margin-top: 2rem;
+  text-align: center;
+  font-family: "Shadows Into Light", cursive;
+  font-size: 80px;
+  color: #f42c40;
+  margin-bottom: 60px;
 }
 
 p {
@@ -81,6 +86,7 @@ p {
   margin-bottom: 40px;
   font-size: 42px;
   color: #f42c40;;
+  
 }
 
 .wrapper p {
@@ -101,6 +107,7 @@ p {
   border-radius: 5px;
   border: #511202;
   font-weight: bold;
+  
 }
 
 .newsletter .envelope {
