--- a/css/products.css
+++ b/css/products.css
@@ -8,12 +8,21 @@
   }
 
   body {
-      background: #F9F7F6;
+      background: #F9F7F6; 
   }
 
 
 /*End of Header Section*/ 
 
+/*letter */
+h1 {
+  font-size: 2.3em;
+  font-weight: 900;
+  letter-spacing: 0.1rem;
+  margin-bottom: 1em;
+  font-family: "Shadows Into Light", cursive;
+  color: #511202;
+}
 
 /*Intro Section*/ 
 
@@ -22,34 +31,36 @@
     margin: auto; 
     overflow: hidden; 
     padding: 10rem;
-	border-radius: 0;
+	  border-radius: 0;
     text-align: center;
     margin-bottom: 0;
+
+    
 }
 
 #intro .responsive-container .intro-box {
     display: flex; 
     flex-direction: column; 
     justify-content: center; 
-    height: 400px; 
-    width: 100%; 
+    height: 500px; 
+    width: 200%; 
 }
 
 
 #intro .responsive-container .intro-box #main-heading {
     font-family: 'Nanum Gothic', sans-serif;
-    font-weight: 600; 
-    color: #333;
+    font-weight: 400; 
+    color: #f42c40;
     font-size: 26px;
     text-align: center; 
   }
 
   #intro .responsive-container .intro-box #main-intro {
-    color: #333; 
+    color: #f42c40;
     text-align: center;
     padding-top: 9px;
     line-height: 26px;
-    font-size: 19px
+    font-size: 15px
   }
 
 /*End of intro section*/ 
@@ -61,7 +72,8 @@
     justify-content: center;
     align-items: center;
     font-size: 2em;
-    color: #20263f;
+    color: #f42c40;
+    font-family: "Shadows Into Light", cursive;
   }
   .container > div > img {
     width: 50%;
@@ -97,8 +109,7 @@
   .container > div:hover img {
     opacity: 0.7;
   }
-
-  
+ 
   /** Cards */
 
   .grid { 
@@ -108,17 +119,17 @@
     align-items: stretch;
     }
   .grid > article {
-    border: 1px solid #ccc;
-    box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+    border: 1px solid white;
+    box-shadow: 2px 2px 6px 0px ;
   }
   .grid > article img {
     max-width: 100%;
   }
   .text {
-    padding: 0 20px 20px;
+    padding: 0 20px 20px #511202;;
   }
   .text > button {
-    background: gray;
+    background: #f42c40;
     border: 0;
     color: white;
     padding: 10px;
