--- a/css/products.css
+++ b/css/products.css
@@ -1,4 +1,5 @@
-/** sections styiling*/
+/** fonts */
+@import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT:wght@700&family=Ubuntu+Condensed&display=swap');
 
 /*CSS Reset*/
 * {
@@ -121,12 +122,15 @@ h1 {
   .grid > article {
     border: 1px solid white;
     box-shadow: 2px 2px 6px 0px ;
+    
   }
   .grid > article img {
     max-width: 100%;
   }
   .text {
-    padding: 0 20px 20px #511202;;
+    padding: 20px #511202;
+    min-height: inherit !important;
+    height:100% !important;
   }
   .text > button {
     background: #f42c40;
@@ -134,6 +138,11 @@ h1 {
     color: white;
     padding: 10px;
     width: 100%;
+    }
+
+    .text > h3 {
+      color: #f42c40;
+      font-family: 'Ubuntu Condensed', sans-serif;
     }
 
     
