fixed problems centering the cards in the product.css file

--- a/css/about.css
+++ b/css/about.css
@@ -24,7 +24,7 @@ html {
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Old Standard TT", serif;
   font-size: 1.3rem;
   min-width: 480px;
   color: #3a3a3a;
