--- a/css/products.css
+++ b/css/products.css
@@ -1,19 +1,18 @@
 /** fonts */
-@import url('https://fonts.googleapis.com/css2?family=Old+Standard+TT:wght@700&family=Ubuntu+Condensed&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Old+Standard+TT:wght@700&family=Ubuntu+Condensed&display=swap");
 
 /*CSS Reset*/
 * {
-    margin: 0; 
-    padding: 0;
-    box-sizing: border-box; 
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  body {
-      background: #F9F7F6; 
-  }
+body {
+  background: #f9f7f6;
+}
 
-
-/*End of Header Section*/ 
+/*End of Header Section*/
 
 /*letter */
 h1 {
@@ -21,128 +20,129 @@ h1 {
   font-weight: 900;
   letter-spacing: 0.1rem;
   margin-bottom: 1em;
-  font-family: "Shadows Into Light", cursive;
+  
   color: #511202;
 }
 
-/*Intro Section*/ 
+p {
+  font-family: "Ubuntu Condensed", sans-serif;
+  font-weight: 300;
+}
+/*Intro Section*/
 
 #intro .responsive-container {
-    width: 100%; 
-    margin: auto; 
-    overflow: hidden; 
-    padding: 10rem;
-	  border-radius: 0;
-    text-align: center;
-    margin-bottom: 0;
-
-    
+  width: 100%;
+  margin: auto;
+  overflow: hidden;
+  padding: 10rem;
+  border-radius: 0;
+  text-align: center;
+  margin-bottom: 0;
 }
 
 #intro .responsive-container .intro-box {
-    display: flex; 
-    flex-direction: column; 
-    justify-content: center; 
-    height: 500px; 
-    width: 200%; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 500px;
+  width: 200%;
 }
 
-
 #intro .responsive-container .intro-box #main-heading {
-    font-family: 'Nanum Gothic', sans-serif;
-    font-weight: 400; 
-    color: #f42c40;
-    font-size: 26px;
-    text-align: center; 
-  }
+  font-weight: 400;
+  font-size: 26px;
+  text-align: center;
+  font-family: "Old Standard TT", serif;
+  color: #511202;
+  text-decoration: none;
+}
 
-  #intro .responsive-container .intro-box #main-intro {
-    color: #f42c40;
-    text-align: center;
-    padding-top: 9px;
-    line-height: 26px;
-    font-size: 15px
-  }
+#intro .responsive-container .intro-box #main-intro {
+  color: #f42c40;
+  text-align: center;
+  padding-top: 9px;
+  line-height: 26px;
+  font-size: 15px;
+  font-family: "Old Standard TT", serif;
+  text-decoration: none;
+}
 
-/*End of intro section*/ 
+/*End of intro section*/
 
 /* Grid Format */
-/*Formats the text inside the image*/
+/* Formats the text inside the image */
 .container > div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 2em;
-    color: #f42c40;
-    font-family: "Shadows Into Light", cursive;
-  }
-  .container > div > img {
-    width: 50%;
-    height: 50%;
-    object-fit: cover;
-  }
-  .container {
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-auto-rows: 300px;
-    padding-top: 6rem;
-    text-align: center;
-  }
-  
-  img {
-    border-radius: 10px;
-    padding: 5px;
-  }
-  .description {
-    display: none;
-    position: absolute;
-  }
-  
-  .container > div:hover {
-    transform: scale(1.1);
-  }
-  .container > div:hover .description {
-    display: block;
-    text-align: center;
-  }
-  
-  .container > div:hover img {
-    opacity: 0.7;
-  }
- 
-  /** Cards */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2em;
+  color: #f42c40;
+  font-family: "Shadows Into Light", cursive;
+}
+.container > div > img {
+  width: 50%;
+  height: 50%;
+  object-fit: cover;
+}
+.container {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-auto-rows: 300px;
+  padding-top: 6rem;
+  text-align: center;
+}
 
-  .grid { 
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    grid-gap: 20px;
-    align-items: stretch;
-    }
-  .grid > article {
-    border: 1px solid white;
-    box-shadow: 2px 2px 6px 0px ;
-    
-  }
-  .grid > article img {
-    max-width: 100%;
-  }
-  .text {
-    padding: 20px #511202;
-    min-height: inherit !important;
-    height:100% !important;
-  }
-  .text > button {
-    background: #f42c40;
-    border: 0;
-    color: white;
-    padding: 10px;
-    width: 100%;
-    }
+img {
+  border-radius: 10px;
+  padding: 5px;
+}
+.description {
+  display: none;
+  position: absolute;
+}
 
-    .text > h3 {
-      color: #f42c40;
-      font-family: 'Ubuntu Condensed', sans-serif;
-    }
+.container > div:hover {
+  transform: scale(1.1);
+}
+.container > div:hover .description {
+  display: block;
+  text-align: center;
+}
 
-    
+.container > div:hover img {
+  opacity: 0.7;
+}
+
+/** Cards */
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-gap: 20px;
+  align-items: stretch;
+}
+.grid > article {
+  border: 1px solid white;
+  box-shadow: 2px 2px 6px 0px;
+}
+.grid > article img {
+  max-width: 100%;
+}
+.text {
+  padding: 20px #511202;
+  min-height: inherit !important;
+  height: 100% !important;
+}
+.text > button {
+  background: #f42c40;
+  border: 0;
+  color: white;
+  padding: 10px;
+  width: 100%;
+}
+
+.text > h3 {
+  color: #f42c40;
+  font-family: "Ubuntu Condensed", sans-serif;
+}
